BTG version 0.9.7
-----------------
The following bugs were fixed:
012839 DHT + encryption support in wwwbtg.
012814 Daemon segfaults when starting client with DHT (0.9.6).
012784 Remove singleton object used for logging.
012771 Add openwrt packages to SVN.
012762 Embed svn version into release information.
012761 Callback manager: execute calls from a thread.
012685 btgdaemon/btgpassswd segfaulting upon start.
012676 Fix boost iostreams detection.
012616 Remove btgq and btgd.
012598 Write man page for btgvs.
012557 Make fails on FreeBSD 6.2.
012545 Update SDL viewer to AGAR 1.3.1.
012544 BTGWWW, add missing files in bcore/command.
012535 btgncli: show peers/seeds in the list of torrents.
012330 Add another version of contextStatusCommand.
012329 Add "stop autoupdating" button in wwwbtg.
012308 Clean up daemon/limitval.cpp.
012301 Update doxygen.
012241 Please use pkglib_LTLIBRARIES instead of lib_LTLIBRARIES.
012226 btgui, files showing as 100%.
012208 Add logging using syslog to wwwui.
012205 torrent files which contain same files but different tracker.
012190 Fix "warning: 'add_torrent' is deprecated".
012125 Update SDL viewer, after refactoring of last files.
012124 Add command line interface(s) unittest.
012120 Update to libtorrent 0.13 aka SVN.
012118 Add session naming.
012108 btgui: buttons OK and Cancel are equivalent when logging-in.
012106 Can't set files to download in btgui.
012055 File checking fails on torrents that contain directories.
012004 Show tracker for each context.
011784 More users can't download same torrent at same time.
011781 FBSD, btgncli does not show the status bar.
011557 Peer_id sent to tracker (feature req).

BTG version 0.9.6
-----------------
The following bugs were fixed:

011971 Inaccuracy in command (Loading All Torrent Files from a Dir).
011902 Memory leak in external/ini.
011901 FBSD, memory leak when using boost/zlib.
011782 FBSD, btgncli uses ~60% of cpu.
011759 Update howto and configure script.