@@ -1,6 +1,10 @@
 BTG version 0.9.7
 -----------------
 The following bugs were fixed:
+
+012997 Session saving, fix saving of dht/encryption settings.
+012975 externalization, simple, exorcism.
+012952 Add switch to disable generating btg-config.
 012839 DHT + encryption support in wwwbtg.
 012814 Daemon segfaults when starting client with DHT (0.9.6).
 012784 Remove singleton object used for logging.
